// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateRouteModuleTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "demo": {
          "value": {
            "layout": {
              "default": "/demo/layout.tsx",
            },
            "page": {
              "default": "/demo/page.tsx",
            },
          },
        },
        "other": {
          "value": {
            "page": {
              "default": "/other/page.tsx",
            },
          },
        },
        "test": {
          "children": {
            "[dynamic]": {
              "children": {
                "hello": {
                  "value": {
                    "page": {
                      "default": "/test/[dynamic]/hello/page.tsx",
                    },
                  },
                },
              },
              "value": {
                "page": {
                  "default": "/test/[dynamic]/page.tsx",
                },
              },
            },
            "other": {
              "value": {
                "page": {
                  "default": "/test/other/page.tsx",
                },
              },
            },
          },
          "value": {
            "layout": {
              "default": "/test/layout.tsx",
            },
            "page": {
              "default": "/test/page.tsx",
            },
          },
        },
      },
      "value": {
        "layout": {
          "default": "/layout.tsx",
        },
        "page": {
          "default": "/page.tsx",
        },
      },
    },
  },
}
`;

exports[`generateRouteModuleTree > basic 2`] = `
{
  "__pathname": "/",
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
  },
  "pages": {
    "/": </page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteModuleTree > basic 3`] = `
{
  "__pathname": "/other",
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/other": <React.Fragment>
      <RedirectBoundary>
        <LayoutContent
          name="/other"
        />
      </RedirectBoundary>
    </React.Fragment>,
  },
  "pages": {
    "/other": </other/page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteModuleTree > basic 4`] = `
{
  "__pathname": "/not-found",
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/not-found": <React.Fragment>
      <RedirectBoundary>
        <LayoutContent
          name="/not-found"
        />
      </RedirectBoundary>
    </React.Fragment>,
  },
  "pages": {
    "/not-found": <ThrowNotFound
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteModuleTree > basic 5`] = `
{
  "__pathname": "/test",
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
  },
  "pages": {
    "/test": </test/page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteModuleTree > basic 6`] = `
{
  "__pathname": "/test/other",
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
    "/test/other": <React.Fragment>
      <RedirectBoundary>
        <LayoutContent
          name="/test/other"
        />
      </RedirectBoundary>
    </React.Fragment>,
  },
  "pages": {
    "/test/other": </test/other/page.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/other",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/other",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/other",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;

exports[`generateRouteModuleTree > basic 7`] = `
{
  "__pathname": "/test/not-found",
  "layouts": {
    "/": </layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/"
        />
      </RedirectBoundary>
    <//layout.tsx>,
    "/test": </test/layout.tsx
      params={{}}
      request={
        {
          "headers": {},
          "url": "https://test.local/test/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    >
      <RedirectBoundary>
        <LayoutContent
          name="/test"
        />
      </RedirectBoundary>
    <//test/layout.tsx>,
    "/test/not-found": <React.Fragment>
      <RedirectBoundary>
        <LayoutContent
          name="/test/not-found"
        />
      </RedirectBoundary>
    </React.Fragment>,
  },
  "pages": {
    "/test/not-found": </test/[dynamic]/page.tsx
      params={
        {
          "dynamic": "not-found",
        }
      }
      request={
        {
          "headers": {},
          "url": "https://test.local/test/not-found",
        }
      }
      url={
        {
          "hash": "",
          "host": "test.local",
          "hostname": "test.local",
          "href": "https://test.local/test/not-found",
          "origin": "https://test.local",
          "password": "",
          "pathname": "/test/not-found",
          "port": "",
          "protocol": "https:",
          "search": "",
          "username": "",
        }
      }
    />,
  },
}
`;
